# Personal-Finance-Manager

./: Fixes-Repairs  Fixes-Repairs~  LICENSE  structure.sh~
Personal-Finance-Manager-JW_Version3.0/: structure.sh
Personal-Finance-Manager-JW_Version3.0/backend/: ExcelExpense.xlsx  ExcelExpense2.xlsx  README.md  Testing.csv  TestingExcelSummary.xlsx  expense.csv  pyproject.toml  requirements.txt  summery.csv  test_plot_income_expense.py  wvwv.csv
Personal-Finance-Manager-JW_Version3.0/backend/app/: main.py
Personal-Finance-Manager-JW_Version3.0/backend/app/api/: auth.py  budgets.py  expenses.py  income.py  notifications.py  reports.py  users.py
Personal-Finance-Manager-JW_Version3.0/backend/app/core/: __init__.py  config.py  security.py
Personal-Finance-Manager-JW_Version3.0/backend/app/machineLearning/: budget_recommendation_model.py
Personal-Finance-Manager-JW_Version3.0/backend/app/models/: budgetModel.py  expenseModel.py  incomeModel.py  notificationModel.py  reportModel.py  transactionModel.py  userModel.py
Personal-Finance-Manager-JW_Version3.0/backend/app/schemas/: budgetSchema.py  incomeSchema.py  notificationSchema.py  reportSchema.py  userSchema.py
Personal-Finance-Manager-JW_Version3.0/backend/app/services/: auth_service.py  budget_service.py  expense_service.py  income_service.py  notification_service.py  report_service.py  user_service.py
Personal-Finance-Manager-JW_Version3.0/backend/tests/: test_budgets.py  test_expenses.py  test_income.py
frontend/: package.json
personal-finance-manager-backend/: .gitignore  README.md~  pyproject.toml  (+3 more)
(+100 files in other folders)
