[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Personal Finance Manager"
version = "0.1.0"
description = "Personal finance manager with budget recommendations"
authors = [
    {name = "Emad"}
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "sqlalchemy>=2.0.23",
    "pydantic>=2.4.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "pymysql>=1.1.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.4.3",
    "httpx>=0.25.1",
    "bcrypt>=3.2.0",
]